Revision history for Overload-FileCheck

{{$NEXT}}

- fix t/mock-setting-errno.t on server not using english as locale

0.002     2018-10-23 17:12:06-05:00 America/Chicago

- mock_stat can handle empty array ref return
- fix unclosed C comment in FileCheck.xs
- avoid issues with test files and case insensitive file systems
- use stat instead of lstat when possible
- hide the second call to lstat (GH #4)
- add helpers for stat: stat_as_file, stat_as_directory...

0.001     2018-10-19 16:58:00-05:00 America/Chicago

First version, this is a very alpha state
    use it at your own risk
