@@ -12,6 +12,7 @@
 #include <EXTERN.h>
 #include <perl.h>
 #include <XSUB.h>
+#include <embed.h>
 
 #define NEED_sv_2pv_flags
 #include "ppport.h"
@@ -453,6 +454,37 @@ CODE:
   RETVAL = newSViv(PL_basetime);
 OUTPUT:
   RETVAL
+
+SV*
+xs_cando(stat_mode, effective_as_int)
+  int stat_mode;
+  int effective_as_int;
+CODE:
+{
+    I32 result;
+    bool effective = FALSE;
+
+    if ( PL_laststatval < 0 )
+      XSRETURN_UNDEF;
+
+    /* performing some checks with PL_statcache */
+    /*
+    result = my_stat_flags(0);
+    if (result < 0)
+      XSRETURN_UNDEF;
+    */
+
+    if ( effective_as_int > 0 )
+        effective = TRUE;
+
+    if (Perl_cando(stat_mode, effective, &PL_statcache))
+      XSRETURN_YES;
+    XSRETURN_NO;
+ }
+ OUTPUT:
+     RETVAL
+
+
 
 BOOT:
 if (!gl_overload_ft) {
