@@ -12,43 +12,31 @@ use warnings;
 
 use Test2::Bundle::Extended;
 use Test2::Tools::Explain;
-use Test2::Plugin::NoWarnings;
 
+#use Test2::Plugin::NoWarnings;
+
+use File::Temp qw/ tempdir /;
 use Overload::FileCheck q{:all};
 use Carp;
 
 {
-
-    note "unmock everything...";
-    unmock_all_file_checks();
-    unmock_stat();
-
     my $save_lstats = {};
     my $save_stats  = {};
     my $save_checks = {};
 
-    ### TODO create some fake files ourself...
-    #   to provide a more stable testsuite
-    my @candidates = qw{
-      /
-      /usr
-      /usr/local
-      /bin
-      /bin/true
-      /usr/bin/true
-      /home
-      /dev/tty1
-      /dev/sda1
-      /root/.bashrc
-    };
+    my $fixtures;
+    eval { $fixtures = create_fixtures(); 1 } or skip_all "Fail to create fixtures files: $@";
 
-    if ( $> == 0 ) {
-        push @candidates, '/tmp';
-    }
+    my %forbidden = map { $_ => 1 } (
+        'T-/dev/tty1',             # .
+        'B-/dev/tty1',             # .
+        'T-./my-sample.socket',    # .
+        'B-./my-sample.socket',    # .
+        'T-/dev/random',           # .
+        'B-/dev/random',           # .
+    );
 
-    my %forbidden = map { $_ => 1 } ( 'T-/dev/tty1', 'B-/dev/tty1' );
-
-    foreach my $f (@candidates) {
+    foreach my $f (@$fixtures) {
 
         # use lstat otherwise we will read the target for symlink
         $save_lstats->{$f} = [ lstat($f) ];
@@ -59,7 +47,10 @@ use Carp;
         foreach my $check ( keys %{ Overload::FileCheck::_get_filecheck_ops_map() } ) {
             next if $forbidden{"$check-$f"};
 
-            # note "Unmocked -$check '$f'";
+            #note "Unmocked -$check '$f'";
+            local $SIG{ALRM} = sub { die "Alarm from Unmocked -$check '$f'" };
+            alarm(60);                        # just avoid to run forever, should be large enough for slow systems...
+
             if ( $check =~ qr{stat} ) {
                 $save_checks->{$f}->{$check} = eval qq{ [ $check('$f') ] };
             }
@@ -67,10 +58,13 @@ use Carp;
                 $save_checks->{$f}->{$check} = eval qq{scalar -$check '$f'};
             }
 
+            alarm(0);
         }
     }
 
     ok mock_all_from_stat( \&mock_stat_from_sys ), "mock_again";
+
+    my $last_cache_for;
 
     sub mock_stat_from_sys {
         my ( $stat_or_lstat, $f ) = @_;
@@ -82,27 +76,41 @@ use Carp;
         my $cache = $stat_or_lstat eq 'stat' ? $save_stats : $save_lstats;
 
         if ( defined $cache->{$f} ) {
-            note "Returning Cached $stat_or_lstat for $f";    #, Carp::longmess();
+
+            #note "Returning Cached $stat_or_lstat for $f";    #, Carp::longmess();
+            $last_cache_for = $f;
             return $cache->{$f};
         }
 
         return FALLBACK_TO_REAL_OP();
     }
 
+    # Testing the mock stat
+    ok -e $fixtures->[0], "-e $fixtures->[0]";
+    is $last_cache_for, undef, "fallback... when not using FAKE/ prefix" or die;
+    ok -e "FAKE/" . $fixtures->[0], "-e FAKE/$fixtures->[0]" or die;
+    is $last_cache_for, $fixtures->[0], "last_cache_for set when using FAKE/ prefix";
+
+    # ok ! -X 'FAKE/./link-to-textfile', "-X ./link-to-textfile";
+    # ok -X 'FAKE//bin/true', "-X /bin/true";
+    # done_testing; exit;
+
     #note explain $save_checks;
 
-    my $last_check;
+    my ( $last_file, $last_check );
     my %todo = map { $_ => 1 } qw{ C-/bin M-/bin };
     my $all_clear;
 
-    foreach my $f (@candidates) {
-        $last_check = $f;
+    foreach my $f (@$fixtures) {
+        $last_file = $f;
 
         # let keys add some randomness
         foreach my $check ( sort keys %{ Overload::FileCheck::_get_filecheck_ops_map() } ) {
-            next if $check =~ qr{stat};    # TODO also check mocked stat maybe first
-
+            next if $check =~ qr{stat};        # TODO also check mocked stat maybe first
             next if $forbidden{"$check-$f"};
+
+            $last_check = "-$check $f";
+
             note "Checking Mocked: -$check '$f' ";
             my $got = eval qq{scalar -$check 'FAKE/$f'};
 
@@ -111,7 +119,7 @@ use Carp;
             if ( $todo{"$check-$f"} || $check =~ qr{^[BT]$} ) {
 
                 # -B and -T are using heuristic guess and need to open the file...
-                todo "-$check '$f' known limitation" => sub {
+                todo "-$check '$f' known limitation (using heuristic guess)" => sub {
                     is $got, $expect, "-$check '$f'";
                 };
                 next;
@@ -165,7 +173,8 @@ use Carp;
     $all_clear = 1;
 
   DEBUG: if ( !$all_clear ) {
-        note "lstat for ", $last_check, explain $save_lstats->{$last_check};
+
+        diag "Last check was ", $last_check, " ; lstat: ", explain $save_lstats->{$last_file};
 
         die "The previous test failed...";
     }
@@ -175,3 +184,74 @@ use Carp;
 done_testing;
 
 exit;
+
+my $TMP;
+
+sub create_fixtures {
+
+    $TMP = tempdir( CLEANUP => 1 );
+
+    chdir $TMP or die;
+
+    mkdir("dir1") or die;
+    mkdir( "dir2", 0600 ) or die;
+
+    if ( open( my $fh, '>', "dir2/file" ) ) {
+        print {$fh} "some content\n";
+        close $fh;
+    }
+
+    if ( open( my $fh, '>', "empty-file" ) ) {
+        close $fh;
+    }
+
+    if ( open( my $fh, '>', "text-file" ) ) {
+        print {$fh} "this is a text file\n" x 10;
+        close $fh;
+    }
+
+    symlink( "dir1", "link-to-dir1" ) or die;
+    symlink( "dir2", "link-to-dir2" ) or die;
+
+    symlink( "text-file",  "link-to-textfile" )  or die;
+    symlink( "empty-file", "link-to-emptyfile" ) or die;
+    symlink( "not-there",  "link-to-void" )      or die;
+
+    # create a socket ?
+    qx{mkfifo my-sample.socket};
+
+    # auto populate fixtures
+    my @fixtures = qx[ find . ];    # improve use File::Find there
+    die "find fails" if $?;
+    chomp @fixtures;
+    die "no fixtures..." unless scalar @fixtures;
+    push( @fixtures, "missing-file", "missing-dir/missing-file" );
+
+    # try to add /bin/true and /bin/false
+    my @extra = qw{
+      /bin/true
+      /bin/false
+      /dev/random
+      /dev/tty1
+      /dev/vda1
+      /dev/sda1
+      /
+      /home
+      /usr
+      /usr/local
+      /tmp
+    };
+
+    foreach my $f (@extra) {
+        push @fixtures, $f if -e $f;
+    }
+
+    # my @ls = qx[ls -l];
+    # chomp @ls;
+    # note explain [ @ls ];
+
+    note explain \@fixtures;
+
+    return \@fixtures;
+}
+
